--- a/handwritten_digits_GANs.ipynb
+++ b/handwritten_digits_GANs.ipynb
@@ -128,13 +128,15 @@
         "from keras.optimizers import Adam\n",
         "from keras.layers import Dense\n",
         "from keras.layers import Conv2D\n",
+        "from keras.layers import Conv2DTranspose\n",
         "from keras.layers import Flatten\n",
         "from keras.layers import Dropout\n",
+        "from keras.layers import Reshape\n",
         "from keras.layers import LeakyReLU\n",
         "from keras.utils.vis_utils import plot_model\n",
         " \n",
         "def define_discriminator(in_shape=(28,28,1)):\n",
-        "  model = Sequential()\n",
+        "  model=Sequential()\n",
         "  model.add(Conv2D(64, (3,3), strides=(2, 2), padding='same', input_shape=in_shape))\n",
         "  model.add(LeakyReLU(alpha=0.2))\n",
         "  model.add(Dropout(0.4))\n",
@@ -271,6 +273,102 @@
       "cell_type": "code",
       "metadata": {
         "id": "e7jgABS_56g5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# GENERATOR MODEL\n",
+        "\n",
+        "def define_generator(latent_dim):\n",
+        "  model=Sequential()\n",
+        "  n_nodes=128*7*7\n",
+        "  model.add(Dense(n_nodes, input_dim=latent_dim))\n",
+        "  model.add(LeakyReLU(alpha=0.2))\n",
+        "  model.add(Reshape((7, 7, 128)))\n",
+        "  model.add(Conv2DTranspose(128, (4, 4), strides=(2, 2), padding='same'))\n",
+        "  model.add(LeakyReLU(alpha=0.2))\n",
+        "  model.add(Conv2DTranspose(128, (4, 4), strides=(2, 2), padding='same'))\n",
+        "  model.add(LeakyReLU(alpha=0.2))\n",
+        "  model.add(Conv2DTranspose(1, (7, 7), activation='sigmoid', padding='same'))\n",
+        "  return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kBOtb0B9Ju9k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "latent_dim=100   #100 element vector; can be 10, 50, 500 etc.\n",
+        "model=define_generator(latent_dim)\n",
+        "model.summary()\n",
+        "keras.utils.plot_model(model, to_file='generator_plot.png', show_shapes=True, show_layer_names=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nuEgLi-xKShk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def generate_latent_points(latent_dim, n_samples):\n",
+        "  latent_points=np.random.randn(latent_dim*n_samples)\n",
+        "  latent_points=latent_points.reshape(n_samples, latent_dim)\n",
+        "  return latent_points"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-vHdieQOLtqe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def generate_fake_samples(g_model, latent_dim, n_samples):\n",
+        "  latent_points=generate_latent_points(latent_dim, n_samples)\n",
+        "  img_fake_samples=g_model.predict(latent_points)\n",
+        "  label_fake_samples=np.zeros((n_samples, 1))\n",
+        "  return img_fake_samples, label_fake_samples"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EHBHPrlYMLgi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "n_samples=25\n",
+        "img_fake_samples, _=generate_fake_samples(model, latent_dim, n_samples)\n",
+        "\n",
+        "for i in range(n_samples):\n",
+        "  plt.subplot(5, 5, i+1)\n",
+        "  plt.axis('off')\n",
+        "  plt.imshow(img_fake_samples[i, :, :, 0], cmap='gray_r')\n",
+        "  \n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5NtvbK0rM0fN",
         "colab_type": "code",
         "colab": {}
       },
