--- a/handwritten_digits_GANs.ipynb
+++ b/handwritten_digits_GANs.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "private_outputs": true,
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,6 +370,62 @@
       "cell_type": "code",
       "metadata": {
         "id": "5NtvbK0rM0fN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def define_gan(g_model, d_model):\n",
+        "  d_model.trainable=False\n",
+        "  model=Sequential()\n",
+        "  model.add(g_model)\n",
+        "  model.add(d_model)\n",
+        "  \n",
+        "  opt=Adam(lr=0.0002, beta_1=0.5)\n",
+        "  model.compile(loss='binary_crossentropy', optimizer=opt)\n",
+        "  return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "adPAN5VLljp3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "latent_dim=100\n",
+        "d_model=define_discriminator()\n",
+        "g_model=define_generator(latent_dim)\n",
+        "gan_model=define_gan(g_model, d_model)\n",
+        "gan_model.summary()\n",
+        "keras.utils.plot_model(gan_model, to_file='gan_plot.png', show_shapes=True, show_layer_names=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uCUuIcjfmSIE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def train_gan(gan_model, latent_dim, n_epochs=100, n_batch=256):\n",
+        "  for i in range(n_epochs):\n",
+        "    x_gan=generate_latent_points(latent_dim, n_batch)\n",
+        "    y_gan=np.ones((n_batch, 1))\n",
+        "    gan_model.train_on_batch(x_gan, y_gan)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2qZi6iEknc2v",
         "colab_type": "code",
         "colab": {}
       },
