--- a/handwritten_digits_GANs.ipynb
+++ b/handwritten_digits_GANs.ipynb
@@ -79,20 +79,7 @@
         "colab": {}
       },
       "source": [
-        "plt.imshow(test_imgs[0], cmap='gray')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UGq1Sj6upFRb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.imshow(test_imgs[10], cmap='gray_r')"
+        "plt.imshow(train_imgs[0], cmap='gray')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -430,7 +417,115 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def train(g_model, d_model, gan_model, dataset, latent_dim, n_epoch=100, n_batch=256):\n",
+        "  batch_per_epoch=int(dataset.shape[0]/n_batch)\n",
+        "  half_batch=int(n_batch/2)\n",
+        "  for i in range(n_epoch):\n",
+        "    for j in range(batch_per_epoch):\n",
+        "      img_real, label_real=generate_real_samples(dataset, half_batch)\n",
+        "      img_fake, label_fake=generate_fake_samples(g_model, latent_dim, half_batch)\n",
+        "      img, label=np.vstack((img_real, img_fake)), np.vstack((label_real, label_fake))\n",
+        "      d_loss, _=d_model.train_on_batch(img, label)\n",
+        "      img_gan=generate_latent_points(latent_dim, n_batch)\n",
+        "      label_gan=np.ones((n_batch, 1))\n",
+        "      g_loss=gan_model.train_on_batch(img_gan, label_gan)\n",
+        "      print('{}, {}/{}, d_loss: {}, g_loss: {}'.format(i+1, j+1, batch_per_epoch, d_loss, g_loss))\n",
+        "      \n",
+        "    if (i+1)%10==0:\n",
+        "      sum_performance(i, g_model, d_model, dataset, latent_dim)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M2pisgzr2MV8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def sum_performance(epoch, g_model, d_model, dataset, latent_dim, n_samples=100):\n",
+        "  img_real, label_real=generate_real_samples(dataset, n_samples)\n",
+        "  _, acc_real=d_model.evaluate(img_real, label_real, verbose=1)\n",
+        "  img_fake, label_fake=generate_fake_samples(g_model, latent_dim, n_samples)\n",
+        "  _, acc_fake=d_model.evaluate(img_fake, label_fake, verbose=1)\n",
+        "  print('Accuracy real: {}, Accuracy fake: {}'.format(acc_real*100, acc_fake*100))\n",
+        "  save_plot(img_fake, epoch)\n",
+        "  filename='generated_plot_{}.h5'.format(epoch+1)\n",
+        "  g_model.save(filename)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wsPLpOMM3F-D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def save_plot(examples, epoch, n=10):\n",
+        "  for i in range(n*n):\n",
+        "    plt.subplot(n, n, i+1)\n",
+        "    plt.axis('off')\n",
+        "    plt.imshow(examples[1, :, :, 0], cmap='gray_r')\n",
+        "  filename='generated_plot_{}.png'.format(epoch+1)\n",
+        "  plt.savefig(filename)\n",
+        "  plt.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rK__8ID64Y9D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "latent_dim=100\n",
+        "d_model=define_discriminator()\n",
+        "g_model=define_generator(latent_dim)\n",
+        "gan_model=define_gan(g_model, d_model)\n",
+        "dataset=load_real_samples()\n",
+        "train(g_model, d_model, gan_model, dataset, latent_dim)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1VfQzgkD4vPj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.models import load_model\n",
+        "\n",
+        "model=load_model('generated_plot_10.h5')\n",
+        "latent_points=generate_latent_points(100, 25)\n",
+        "x=model.predict(latent_points)\n",
+        "save_plot(x, 5)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kzc1hTnnF_tn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "vector=np.asarray([[0.0 for _ in range (100)]])\n",
+        "x=model.predict(vector)\n",
+        "plt.imshow(x[0, :, :, 0], cmap='gray_r')\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
